--- a/index.html
+++ b/index.html
@@ -52,16 +52,18 @@
                 Join 60,000+ product managers receiving monthly updates on:
               </p>
               <ul class="space-y-3 text-charcoalGray md:text-[18px]">
-                <li class="flex items-start gap-4">
-                  <img src="/assets/images/icon-list.svg" alt="icon" />Product
+                <li class="flex items-start gap-4 md:items-center">
+                  <img src="./assets/images/icon-list.svg" alt="icon" />Product
                   discovery and building what matters
                 </li>
                 <li class="flex items-start gap-4">
-                  <img src="/assets/images/icon-list.svg" alt="icon" />Measuring
-                  to ensure updates are a success
+                  <img
+                    src="./assets/images/icon-list.svg"
+                    alt="icon"
+                  />Measuring to ensure updates are a success
                 </li>
                 <li class="flex items-start gap-4">
-                  <img src="/assets/images/icon-list.svg" alt="icon" />And much
+                  <img src="./assets/images/icon-list.svg" alt="icon" />And much
                   more!
                 </li>
               </ul>
@@ -98,6 +100,6 @@
       </section>
     </main>
 
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
