--- a/thank-you.html
+++ b/thank-you.html
@@ -50,7 +50,7 @@
               </div>
 
               <a
-                href="/index.html"
+                href="./index.html"
                 class="rounded-lg bg-darkSlateGray py-4 text-center text-base font-bold text-pureWhite duration-300 ease-in-out hover:bg-tomato"
               >
                 Dismiss message
@@ -61,6 +61,6 @@
       </section>
     </main>
 
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
