--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <link rel="stylesheet" href="./src/output.css" />
   </head>
   <body
-    class="flex min-h-screen items-center justify-center bg-darkSlateGray font-roboto"
+    class="flex min-h-screen items-center justify-center bg-pureWhite font-roboto md:bg-darkSlateGray"
   >
     <main>
-      <section class="h-screen bg-pureWhite md:h-full md:rounded-3xl">
+      <section class="h-screen bg-pureWhite md:mx-8 md:h-full md:rounded-3xl">
         <article class="container max-w-[1000px] md:p-6">
           <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:gap-8">
             <div class="md:order-last">
